# Rust-Pokemon-game-example

./: .env.example  Cargo.toml  README.md  diesel.toml
bins/app/: Cargo.toml
bins/app/src/: main.rs  web.rs
bins/app/src/application/: configure.rs  mod.rs
bins/app/src/application/auth/login/: contract.rs  data.rs  domain.rs  infrastructure.rs  setup.rs  test.rs
bins/app/src/application/auth/login/http/: handle_login.rs  handle_logout.rs  handle_refresh.rs  handle_verify_email.rs  mod.rs
bins/app/src/application/auth/registration/: contract.rs  data.rs  domain.rs  infrastructure.rs  mod.rs  setup.rs  test.rs
bins/app/src/application/auth/registration/http/: handle_create.rs  handle_verify_email_resend.rs  mod.rs
bins/app/src/application/pokemon_game/: contract.rs  data.rs  domain.rs  infrastructure.rs  setup.rs  test.rs
bins/app/src/application/pokemon_game/http/: handle_game_attempt.rs  handle_game_init.rs  handle_paginated.rs  mod.rs
bins/app/src/middleware/: auth.rs  mod.rs
libs/config/src/: lib.rs
libs/error/: Cargo.toml
libs/infrastructure/: Cargo.toml
libs/support/: Cargo.toml
libs/support/src/: lib.rs
libs/support/src/helpers/: base_url.rs  generate_tokens.rs  http.rs  mod.rs  random_pokemon_id.rs  send_email.rs  validations.rs  verify_access_token.rs  verify_refresh_token.rs
libs/support/src/services/seeder/: abilities.rs  mod.rs  pokemons.rs  stats.rs  types.rs
libs/support/src/services/seeder/test/: mod.rs  test_seed.rs
libs/support/src/store/models/: action_token.rs  mod.rs  pokemon.rs  pokemon_ability.rs  pokemon_stat.rs  pokemon_type.rs  user.rs  user_attempts.rs  user_pokedex.rs
migrations/2023-07-26-071839_create_pokemons/: down.sql  up.sql
(+18 files in other folders)
