[package]
name = "rust-pokedex"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
config = { path = "../../libs/config" }
error = { path = "../../libs/error" }
infrastructure = { path = "../../libs/infrastructure" }
support = { path = "../../libs/support" }

# codegen stuff
async-trait = "0.1"

# Http stuff
actix-web = "4.3.0"
actix-service = "2.0.2"
reqwest = { version = "0.11.10", features = ["json"] }
http = "0.2"

# database stuff
diesel = { version = "2.1.0", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
] }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#helpers
validr = "0.3.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
pwhash = "1"

chrono = { version = "0.4.26", features = ["serde"] }
cookie = "0.16"
futures-util = "0.3.28"
futures = "0.3.4"

